Properly formatted changelog file and updated version for updated publishing

--- a/Changelog
+++ b/Changelog
@@ -1,1 +1,33 @@
-1/28/2026: version 0.1.1 -> removed Roth401K from pretax enum
+# Changelog
+
+All notable changes to this project will be documented in this file.
+
+The format is based on [Keep a Changelog](https://keepachangelog.com/en/1.0.0/),
+and this project adheres to [Semantic Versioning](https://semver.org/spec/v2.0.0.html).
+
+## [Unreleased]
+
+## [0.1.2] - 2026-02-01
+
+### Added
+- Added function to compare calculated monthly net income to monthly expenses
+
+### Changed
+- Modified feature description
+
+### Deprecated
+- Soon-to-be removed feature
+
+### Removed
+- Deleted feature description
+
+### Fixed
+- Bug fix description
+
+### Security
+- Security vulnerability fix
+
+## [0.1.0] - 2026-01-15
+
+### Added
+- Initial release features
