--- a/Changelog
+++ b/Changelog
@@ -7,6 +7,11 @@ and this project adheres to [Semantic Versioning](https://semver.org/spec/v2.0.0
 
 ## [Unreleased]
 
+## [0.2.4] - 2026-02-9
+
+### Added
+- Added CLI crate documentation.
+
 ## [0.2.1] - 2026-02-01
 
 ### Added
