--- a/Changelog
+++ b/Changelog
@@ -10,6 +10,11 @@ and this project adheres to [Semantic Versioning](https://semver.org/spec/v2.0.0
 ## [0.2.4] - 2026-02-9
 
 ### Added
+- Added missing documentation for interaction.rs module. Also added brief instructions for CLI usage
+
+## [0.2.4] - 2026-02-9
+
+### Added
 - Added CLI crate documentation.
 
 ## [0.2.1] - 2026-02-01
